refactor: MainController의 일부 기능 LottoTickets로 분리