@@ -3,6 +3,8 @@ package view;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import domain.LottoTicket;
+import domain.LottoTickets;
+import domain.Purchase;
 import domain.Rank;
 import domain.Result;
 
@@ -23,17 +25,14 @@ class OutputViewTest {
         OutputStream out = new ByteArrayOutputStream();
         System.setOut(new PrintStream(out));
 
-        List<LottoTicket> lottoTickets = new ArrayList<>();
-        lottoTickets.add(LottoTicket.of(Arrays.asList(1, 2, 3, 4, 5, 6)));
-        lottoTickets.add(LottoTicket.of(Arrays.asList(7, 8, 9, 10, 11, 12)));
+        LottoTickets lottoTickets = new LottoTickets(List.of(List.of(1, 2, 3, 4, 5, 6)), 0);
+        Purchase purchase = new Purchase(1000, 1);
 
-        OutputView.printLottoTickets(1, 1, lottoTickets);
+        OutputView.printLottoTickets(purchase, lottoTickets);
 
-        assertThat(out.toString()).isEqualTo("수동으로 1장, 자동으로 1장을 구매했습니다."
+        assertThat(out.toString()).isEqualTo("수동으로 1장, 자동으로 0장을 구매했습니다."
             + System.lineSeparator()
             + "[1, 2, 3, 4, 5, 6]"
-            + System.lineSeparator()
-            + "[7, 8, 9, 10, 11, 12]"
             + System.lineSeparator()
         );
     }
